# abtoolkit

./: .gitignore  LICENSE  Makefile  README.md  pre-commit.bash  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish-pypi.yml
abtoolkit/: utils.py
abtoolkit/continuous/: simulation.py  stattests.py  utils.py
abtoolkit/discrete/: simulation.py  stattests.py  utils.py
examples/: check_clt.py  continuous_var_analysis.py  discrete_var_analysis.py
src/continuous/: sample_size_estimation.py  simulation.py  stattests.py  utils.py
src/discrete/: sample_size_estimation.py
tests/: test_continuous_sample_size_estimation.py  test_continuous_simulation.py  test_continuous_stattests.py  test_continuous_tests.py  test_continuous_utils.py  test_discrete_simulation.py  test_discrete_stattests.py  test_discrete_utils.py  test_utils.py
